# CommutingODGen-Dataset

./: .gitignore  ana.py  fgw.py  fgw_memmap.py  pyproject.toml  utils.py
models/DiffODGen/: data_load.py
models/GM_E/: main.py
models/OT_R/: data_load.py  main.py  model.py
models/yours/: data_load.py  dataset.py  model.py
models/yours/utils/: load_utils.py  metrics.py  train_utils.py
utils/: train_utils.py
