[project]
name = "commutingodgen-dataset"
version = "0.1.0"
description = ""
authors = [
    {name = "Hideki",email = "hidekihayashi026@gmail.com"}
]
readme = "README.md"
requires-python = "3.8.18"
dependencies = [
    "scikit-learn (==1.3.0)",
    "scipy (==1.10.1)",
    "networkx (==3.1)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "torch (==1.13.1)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pot (>=0.9.5,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
